@@ -1,3 +1,12 @@
+# ChangeLog for sci-misc/vislcg3
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: $
+
+*vislcg3-0.9.9.10730 (28 May 2015)
+
+  28 May 2015; Flammie Pirinen <flammie@gentoo.org> +vislcg3-0.9.9.10730.ebuild:
+  new svn version
+
 *vislcg3-0.9.8.10063 (25 Dec 2014)
 
   25 Dec 2014; Flammie Pirinen <flammie@gentoo.org> +metadata.xml,
